# systemd-search

./: .gitignore  ARCHITECTURE.md  LICENSE  Pipfile  README.md  pyproject.toml  systemd-search
.github/workflows/: pr.yml  release.yml  tests.yml
molecule/common/: converge.yml  prepare.yml  verify.yml
molecule/common/files/: fixture-disabled.service  fixture-failing.service  fixture-multi-a.service  fixture-multi.path  fixture-multi.timer  fixture-single.service
molecule/debian/: molecule.yml
molecule/rocky/: molecule.yml
scripts/: build-deb.sh  build-rpm.sh  build-standalone.sh  release-notes.md
src/systemd_search/: __init__.py
tests/: conftest.py  test_unit.py
